--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 </head>
 <body class="bg-success">
 
-    <div class="content-fluid d-flex flex-column justify-content-center">
-
+    <div class="content-fluid d-flex flex-column justify-content-center vh-100 align-items-center">
+        <div class="card">
+            <div id="imgTop" class="card-header-custom"></div>
+            <div id="number" class="card-body"></div>
+            <div id="imgBtm" class="card-footer-custom"></div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
